--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.navigation:navigation-fragment:2.3.4"
     implementation "androidx.navigation:navigation-ui:2.3.4"
+    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
 }
