--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:2.3.4"
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
