--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.github.santalu:maskara:1.0.0'
 }
