--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QrScannerAppProject">
-        <activity android:name=".view.LogInActivity"></activity>
         <activity android:name=".view.openAppActivity" />
-        <activity android:name=".view.MainActivity">
+
+
+        <activity android:name=".view.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".view.MainActivity"/>
+
         <activity android:name=".view.CaptureActivity"
             android:screenOrientation="fullSensor"
             android:stateNotNeeded="true"
